microservices-chart/templates/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-service
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  type: ClusterIP
